--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   position: relative;
   padding: 0;
   margin: 0px;
+  overflow-x: hidden; 
 }
 
 #container {
@@ -23,12 +24,17 @@ body {
   width: 100%;
 }
 
+.nome-pet {
+  font-weight: bold
+}
+
 #logo {
   text-align: center;
 }
 
 .subtitulo {
   padding-left: 10px;
+  margin-bottom: 10%;
 }
 
 #identificacao {
@@ -36,14 +42,17 @@ body {
   flex-direction: row;
 }
 
+.espaco {
+  margin-bottom: 30%;
+}
+
 
 .perfil{
-  height: 80px;
+  height: 40px;
   border-radius: 50%;
-  border: 50px #FF9922;
-  margin-right: 10px;
-  margin-left: 10px;
-  margin-bottom: 10px;
+  /* border: 50px #FF9922; */
+  margin: 10px;
+  align-items: center;
 }
 
 .info {
@@ -63,15 +72,21 @@ body {
 
 .bloco {
   display: flex;
-  background: #ffffff;
-  height: 100px;
-  width: 150px;
   margin: 5px;
-  justify-content: center;
+  border-radius: 10px;
+  box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.1);
+}
+
+.bloco-icone {
+  width: 8%;
+  margin-right: 3%;
+  margin-bottom: 5px;
+}
+
+.bloco-titulo{
+  display: flex;
+  flex-direction: row;
   align-items: center;
-  align-content: center;
-  border-radius: 5px;
-  box-shadow: 1px 15px 15px black;
 }
 
 .adicionarPet{
@@ -144,6 +159,27 @@ body {
   justify-content: center;
 }
 
+.btn-repsom {
+  align-content: center;
+  background: #FF9922;
+  width: 200px;
+  height: 40px;
+  line-height: 40px;
+  border-radius: 10px;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+}
+
+.btn-repsom2 {
+  
+  text-decoration: none;
+  color: #ffffff;
+  align-items: center;
+}
+
 .icones {
   display: flex;
   flex-direction: row;
@@ -191,4 +227,36 @@ body {
   align-content: center;
   border-radius: 5px;
   box-shadow: 1px 15px 15px black;
+}
+
+.horario{
+  float: left;
+}
+
+.btn-sim{
+  align-content: center;
+  background: #FF22C1;
+  width: 50px;
+  height: 20px;
+  line-height: 20px;
+  border-radius: 2px;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  float: left;
+}
+
+.btn-sim2 {
+  text-decoration: none;
+  font-size: 15px;
+  color: #ffffff;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+}
+
+.linha{
+  display: flex;
+  flex-direction: row;
 }
