--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,20 @@ body {
   /* grid-template-rows:1fr 5fr 80px; */
 }
 
-#topo {
+#logo-cabeçalho{
+  align-items: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 150px;
+}
+
+/* #div-logo{
+
+  
+} */
+
+/* #topo {
   align-items: center;
   background: #ffffff; 
   display: flex;
@@ -22,7 +35,7 @@ body {
   height: 90px;
   justify-content: center;
   width: 100%;
-}
+} */
 
 .nome-pet {
   font-weight: bold
@@ -36,7 +49,7 @@ body {
   margin-bottom: 10%;
   margin-top: 5%;
   text-align: left;
-  font-size: 40pt;
+  font-size: 2em;
   font-weight: bold;
 
 }
@@ -98,7 +111,7 @@ body {
 
   vertical-align: middle;
 
-  margin-bottom: 20%;
+  margin-bottom: 10%;
   margin-top: 5%;
 
 }
@@ -109,7 +122,7 @@ body {
 
 #novoPet{
   font-weight: bold;
-  margin-left: 3%;
+  margin-left: 10px;
   font-size: 15pt;
 }
 
@@ -166,6 +179,10 @@ body {
   justify-content: center;
 }
 
+.div-repsom{
+  margin-top: 20px;
+}
+
 .btn-repsom {
   align-content: center;
   background: #FF9922;
@@ -177,12 +194,59 @@ body {
   justify-content: center;
   margin-top: 5%;
   margin: auto;
-  width: 25%;
-
+  width: 200px;
+  max-width: 300px;
 }
 
 .btn-repsom2 {
-  
+  text-decoration: none;
+  color: #ffffff;
+  align-items: center;
+}
+
+.btn-repsom2:hover{
+  text-decoration: none;
+  color: #ffffff;
+  align-items: center;
+}
+.btn-editar {
+  align-content: center;
+  background: #FF9922;
+  line-height: 40px;
+  border-radius: 10px;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 5%;
+  margin-left: 20px;
+  /* margin: auto; */
+  width: 100px;
+  max-width: 150px;
+}
+.btn-deletar {
+  align-content: center;
+  background: #FF2222;
+  line-height: 40px;
+  border-radius: 10px;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 5%;
+  margin-right: 20px;
+  /* margin: auto; */
+  width: 100px;
+  max-width: 150px;
+}
+
+.btn-editar2 {
+  text-decoration: none;
+  color: #ffffff;
+  align-items: center;
+}
+
+.btn-editar2:hover{
   text-decoration: none;
   color: #ffffff;
   align-items: center;
@@ -214,16 +278,6 @@ body {
   margin-bottom: 20px;
 }
 
-.alarmes {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  overflow-x: auto;
-}
-
 .alarme {
   display: flex;
   background: #ffffff;
@@ -238,7 +292,8 @@ body {
 }
 
 .horario{
-  float: left;
+  display: flex;
+  flex: row;
 }
 
 
@@ -259,7 +314,8 @@ body {
 
 .ico-rodape {
   height: auto;
-  padding-right: 5%;
+  padding-right: 50%;
+  padding-left: 50%;
 }
 
 .div-repsom {
@@ -271,4 +327,18 @@ body {
   height: 500px;
   padding: 50px;
 }
+
+.check {
+  margin-left: 20px;
+}
+
+.map{
+  width: 100%;
+  height: 400px;
+}
+
+iframe{
+  height: 300px;
+}
+
 
